[gd_scene load_steps=3 format=3 uid="uid://cj7pwe6nfrxd8"]

[ext_resource type="FontFile" uid="uid://c6h3we4j2dvbf" path="res://fonts/GravityBold8.ttf" id="1_55wo0"]
[ext_resource type="Script" uid="uid://cuhjfxe7ye030" path="res://scenes/ui/building_ui_components/pitch_shifter_component.gd" id="1_o7v65"]

[node name="PitchShifterComponent" type="HBoxContainer"]
mouse_filter = 0
script = ExtResource("1_o7v65")

[node name="ComponentLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.19215687, 0.16078432, 0.28235295, 1)
theme_override_fonts/font = ExtResource("1_55wo0")
theme_override_font_sizes/font_size = 6
text = "Pitch:"

[node name="PitchShifter" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ShiftUp" type="Button" parent="PitchShifter"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BuildingMenuButtonPrimary"
text = "+"

[node name="ShiftDown" type="Button" parent="PitchShifter"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BuildingMenuButtonPrimary"
text = "-"
